프로필 편집 퍼블리싱

--- a/public/css/profileEdit.css
+++ b/public/css/profileEdit.css
@@ -2,11 +2,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
+    background-color: #f0f0f0;   
 }
 
 .header {
-    background-color: #007bff;
+    background-color: #3498db;
     padding: 10px 0;
 }
 
@@ -21,30 +21,129 @@ body {
 
 .header-title {
     color: #fff;
-    font-size: 29px;
+    font-size: 24px;
 }
 
-/* 중앙 유저 정보 */
-/* .user-info {
+/* 유저 정보 스타일 */
+.user-info {
+    background-color: #fff;
+    margin: 20px auto; 
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    overflow-y: auto;
+}
 
-} */
-
-/* 프로필 사진 영역 */
+/* 상단 프로필 사진 영역 */
 .top-info {
     display: flex;
     justify-content: center;
-    height: 200px;
 }
 
-/* .center-info {
-
-} */
-
+/* 유저 정보 상단 영역 */
 .center-top-info {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-/* .center-bottom-info {
+.info-set {
+    flex-basis: calc(50% - 10px); 
+    margin-bottom: 20px;
+}
 
-} */
+.info-set label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.info-set input{
+    width: 90%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    background-color: rgb(230, 228, 228);
+}
+
+.info-set #email{
+    background-color: white;
+}
+
+.info-set #nickName{
+    background-color: white;
+}
+
+/* 유저 정보 하단 영역(카테고리) */
+.category-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.info-cate label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.info-cate input {
+    width: 95%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+/* 저장 버튼 스타일 */
+button {
+    position: relative;
+    left: 33%;
+    background-color: #3498db;
+    width: 30%;
+    margin-top: 20px;
+    padding: 10px 20px;
+    border-radius: 3px;
+    border : none;
+    color: #fff;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #2980b9;
+}
+
+/* 비밀번호 변경 링크 */
+.a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+a.pwEdit {
+    display: inline-block;
+    background-color: #3498db;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 3px;
+    text-decoration: none;
+}
+
+a.pwEdit:hover {
+    background-color: #2980b9;
+}
+
+/* 회원탈퇴 링크 */
+a.destroy {
+    display: inline-block;
+    color: gray;
+    font-size: 12px;
+    border: none;
+    text-decoration: underline;
+    cursor: pointer;
+    margin-left: 10px;
+}
