--- a/views/findPw.ejs
+++ b/views/findPw.ejs
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <title>비밀번호 찾기</title>
+    <link rel="stylesheet" href="/public/css/findPw.css">
 </head>
 <body>
-    <h1>비밀번호 찾기</h1>
+    <div class="header">
+        <div class="header-content">
+            <div class="header-title">
+                비밀번호 찾기
+            </div>
+        </div>
+    </div>
+    <p>가입 시 기재한 아이디와 이름을 입력해주세요</p>
     <form name="findPw-form">
-        아이디 : <input type="text" id="id" /><br />
-        이름 : <input type="text" id="name" /><br />
-        <button type="button" onclick="findPw()">확인</button>
+        <div class="id">
+            <label for="id">아이디</label>
+            <input type="text" id="id" /><br />
+        </div>
+        <div class="name">
+            <label for="name">이름</label>
+            <input type="text" id="name" /><br />
+        </div>
+        <div class="btn">
+            <div class="findPw_btn">
+                <button type="button" onclick="findPw()">찾기</button>
+            </div>
+            <div class="cancel_btn">
+                <button type="button" onclick="cancel()">취소</button>
+            </div>
+        </div>
+        <div class="result"></div>
     </form>
-    <div class="result"></div>
     
     <script>
         async function findPw() {
@@ -33,9 +55,12 @@
                 document.location.href='/'
             }else{
                 resultBox.textContent = `${result.data.message}`
+                resultBox.classList.add('show');
             }
         }
-
+        function cancel() {
+            window.location.href='/'
+        }
     </script>
 </body>
 </html>
