--- a/views/boardList.ejs
+++ b/views/boardList.ejs
@@ -169,7 +169,7 @@
             })
             if (res.data.result) {
                 alert('채팅방에 참여했습니다')
-                document.location.assign('/chat')
+                document.location.assign('/mychat')
             }
         }
     </script>
