--- a/public/css/board/board_list.css
+++ b/public/css/board/board_list.css
@@ -1,83 +1,117 @@
-    body{
-        background-color: rgba(186, 186, 186, 0.595);
+    .body{
+        background-color: #363636;
+        color:#363636;
     }
     .wrap{
         display: flex;
-        /* width: 100%;
-        height: 70%; */
+        margin: 0 10%;
         justify-content: space-between;
-        flex-wrap: wrap;
+        flex-wrap: wrap; 
     }
     .wrap > .imgFlex1:hover{
-        background-color: rgb(1, 170, 255);
-        color: #ffffff;
+        border : solid rgb(244, 115, 033) 3px;
+       background-color:  rgb(71,87,111);
+       color: rgb(255, 255, 255);
     }
     .wrap > .imgFlex2:hover{
-        background-color: rgb(1, 170, 255);
-        color: #ffffff;
+        border : solid rgb(244, 115, 033) 3px;
+       background-color:  rgb(244, 115, 033);
+       color: rgb(255, 255, 255);
+       
+    }
+    .wrap > .imgFlex1:hover img{
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(320deg) brightness(104%) contrast(101%);
+    }
+    .wrap > .imgFlex2:hover img{
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(320deg) brightness(104%) contrast(101%);
     }
     .imgFlex1{
+     
+
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 200px;
+        height: 170px;
         width: 45%;
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(71,87,111);
+        border : solid rgb(71,87,111) 3px;
+        /* rgb(71.87.111) */
+        /* #67c8ff */
         border-radius: 7px;
-        margin-left: 2.5%;
-        margin-right: 2.5%;
+        margin-left: 1.5%;
+        margin-right: 1.5%;
         margin-bottom: 20px;    
     }
     
     .imgFlex2{
+
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 200px;
+        height: 170px;
         width: 45%;
-        background-color: white;
+        background-color: rgb(71,87,111);
+        border : solid rgb(71,87,111) 3px;
         border-radius: 7px;
-        margin-bottom: 20px;
-        margin-right: 2.5%;
-        margin-left: 2.5%;
+        margin-left: 1.5%;
+        margin-right: 1.5%;
+        margin-bottom: 20px;  
     }
+
     .roomImg{
+        background-image: url("https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/test_1280.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         position: relative;
-        height: 150px;
-        width: 150px;
+        height: 130px;
+        width: 130px;
+        min-width: 130px;
         margin: 2%;
         border-radius: 15%;
-        background-color: rgb(255, 255, 255);
-        border: 5px solid black;
+        /* background-color: rgb(255, 255, 255); */
+        border: 3px solid rgba(244, 114, 33, 0.302);
         
     }
     .boardInfo{
+        text-overflow: clip;
         position: relative;
-        height: 150px;
-        width: 70%;
+        height: 130px;
+        width: 50%;
         margin-right: 2%;
-
     }
     .boxBordCategory{
-        height: 20%; 
+        height: 20%;
+        background-color: rgb(244, 115, 033);
+        border-radius: 5px;
+        display: inline;
+        color: rgb(255, 255, 255);
     }
     .boxTitle{
-        height: 45%;
+        color: rgb(255, 255, 255);
         font-size: 35px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     .boxCreateAt{
-        height: 15%;
+        color: rgb(255, 255, 255);
+        position: relative;
+        height: 15%;   
     }
     .boxViews{
+        color: rgb(255, 255, 255);
+        position: relative;
         height: 15%;
-        
-        color: rgb(124, 124, 124);
+        color: rgb(255, 255, 255);
     }
 
-    @media (max-width : 990px) {
+    @media (max-width : 866px) {
         .wrap{
-            /* display: block; */
-            /* width: 50%; */
+            display: block;
+            width: 70%;
+            min-width: 300px;
+            margin: 0 auto;
         }
         .imgFlex1{
             display: flex;
@@ -92,17 +126,12 @@
             margin-left: 0px;
         }
         .boardInfo{
-            width: 75%;
+            width: 50%;
         }
-    }
-    @media (max-width : 800px) {
-        .wrap{
-            display: block;
-            width: 100%;
-            max-width: 100%;
+        .boxCreateAt{
+            height: 25%;          
         }
-
-        .boardInfo{
-            width: 75%;
+        .boxViews{
+            bottom: 5%;
         }
     }
