--- a/views/postNew.ejs
+++ b/views/postNew.ejs
@@ -8,10 +8,121 @@
     <title>게시판 등록 페이지</title>
     
 </head>
+<style>
+    h1{
+        color:  #67c8ff;
+        text-align: center;
+    }
 
+   
+    .board-form{
+        background-color:  rgb(255, 255, 255);
+      
+        display: block;
+       margin-left: 5%;
+       margin-right: 5%;
+
+    }
+    .board-form #title {
+      
+        text-align: center;
+
+        width: 100%;
+        height: 40px;
+  
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+        background-color:  rgb(255, 255, 255);
+
+    }
+    #content {
+
+        background-color: rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+
+        width: 100%;
+        resize: none;
+
+    }
+    
+    #eventDate{
+        height: 40px;
+        background-color:rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+    }
+    #category{
+        margin-bottom: 40px;
+        height: 40px;
+        background-color: rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+    }
+    #boardCreateButton{
+        margin-bottom: 40px;
+        height: 40px;
+        background-color:rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+        color: #67c8ff
+    }
+    #boardCreateButton:hover{
+    
+        background-color:#67c8ff;
+        border: solid #67c8ff 3px;
+  
+        color: rgb(255, 255, 255);
+    }
+    #backButton{
+        height: 40px;
+        background-color:rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+        color: #67c8ff
+    }
+    #backButton:hover{
+    
+        background-color:#67c8ff;
+        border: solid #67c8ff 3px;
+  
+        color: rgb(255, 255, 255);
+    }
+    .left-form{
+        margin:0 auto;
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+       
+    }
+    .right-form{
+        margin:0 auto;
+        /* margin-right: 50px; */
+        display: flex;
+        width: 100%;
+        margin-top: 40px;
+        flex-direction: column;
+    }
+    @media (max-width : 800px) {
+        .left-form{
+
+            width: 100%;
+
+        }
+        .right-form{
+            margin-top: 40px;
+
+            width: 100%;
+        }
+        .board-form{
+            display: block;
+
+        }
+    }
+</style>
 <body>
-    <h1>등록 페이지</h1>
-
+    <h1>게시판 작성</h1>
+<!-- 
     <form name="board-form">
         <label for="title">게시글 제목 : </label>
         <input type="text" id="title" name="title" placeholder="제목을 입력해주세요."><br/>
@@ -22,7 +133,48 @@
         <label for="category"> 카테고리 : </label>
         <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/>
         <button type="button" onclick="boardCreate()">게시판 만들기</button>
-    </form>
+    </form> -->
+   
+        <!-- <form class="board-form" name="board-form">
+            <div class="left-form">
+                <label for="title"> </label>
+            <input type="text" id="title" name="title" placeholder="제목을 입력해주세요."><br/>
+            <label for="content"> </label>
+            <textarea  cols="50" rows="30" type="text" id="content" name="content" placeholder="내용을 입력해주세요."></textarea>
+            </div>
+            <div class="right-form">
+                <label for="eventDate"></label>
+                <input type="date" id="eventDate" name="eventDate" placeholder="홍보시간을 입력해주세요."><br/>
+                <label for="category"></label>
+                <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/>
+                <button id="boardCreateButton" type="button" onclick="boardCreate()">게시판 만들기</button>
+            </div>
+        </form> -->
+
+        <form class="board-form" name="board-form">
+            <div class="left-form">
+                <label for="title"></label>
+            <input type="text" id="title" name="title" placeholder="제목을 입력해주세요."><br/>
+            <label for="content"> </label>
+            <textarea  cols="50" rows="30" type="text" id="content" name="content" placeholder="내용을 입력해주세요."></textarea>
+            </div>
+            <div class="right-form">
+                <label for="eventDate">홍보시간</label>
+                <input type="datetime-local" id="eventDate" name="eventDate" placeholder="홍보시간을 입력해주세요."><br/>
+                <label for="category">카테고리</label>
+                <!-- <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/> -->
+                <select name="category" id="category">
+                    <option value="sports">sports</option>
+                    <option value="e-sports">e-sports</option>
+                </select>
+                <button id="boardCreateButton" type="button" onclick="boardCreate()">게시판 만들기</button>
+                <button id="backButton" type="button" onclick="back()">뒤로가기</button>
+            </div>
+        </form>
+  
+  
+
+       
 
     <script src="../public/js/board/board_CRUD.js"></script>
 </body>
