--- a/views/postedit.ejs
+++ b/views/postedit.ejs
@@ -6,20 +6,137 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>게시판 수정 페이지</title>
 </head>
+<style>
+    h1{
+        color:  #67c8ff;
+        text-align: center;
+    }
+
+    .wrap{
+
+    }
+    .board-form{
+        background-color:  rgb(255, 255, 255);
+      
+        display: block;
+       margin-left: 5%;
+       margin-right: 5%;
+     
+       height: 400px;
+    }
+    .board-form #title {
+        text-align: center;
+        width: 100%;
+        height: 40px;
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+        background-color:  rgb(255, 255, 255);
+
+    }
+    #content {
+        background-color: rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+        width: 100%;
+        height: 100%;
+        resize: none;
+    }
+    
+    #eventDate{
+        height: 40px;
+        background-color:rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+    }
+    #category{
+
+        height: 40px;
+        background-color: rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+    }
+    #boardEditButton{
+        height: 40px;
+        background-color:rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+        color: #67c8ff;
+       
+        
+    }
+    #boardEditButton:hover{
+    
+        background-color:#67c8ff;
+        border: solid #67c8ff 3px;
+  
+        color: rgb(255, 255, 255);
+    }
+    #boardDeleteButton{
+        /* margin-top: 40px; */
+        height: 40px;
+        background-color:rgb(255, 255, 255);
+        border: solid #67c8ff 3px;
+        border-radius: 10px;
+        color: #67c8ff
+    }
+    #boardDeleteButton:hover{
+        background-color:#67c8ff;
+        border: solid #67c8ff 3px;
+        color: rgb(255, 255, 255);
+    }
+    .left-form{
+        margin:0 auto;
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+       
+    }
+    .right-form{
+        margin:0 auto;
+        /* margin-right: 50px; */
+        display: flex;
+        width: 100%;
+        margin-top: 40px;
+        flex-direction: column;
+    }
+    @media (max-width : 800px) {
+        .left-form{
+           
+        }
+        .right-form{
+           
+
+           
+        }
+        .board-form{
+           
+
+        }
+    }
+</style>
 <body>
     <h1>수정 페이지</h1>
-    <form name="board-form">
-        <label for="title">게시글 제목 : </label>
-        <input type="text" id="title" name="title" placeholder="제목을 입력해주세요."><br/>
-        <label for="content"> 내용 : </label>
-        <input type="text" id="content" name="content" placeholder="내용을 입력해주세요."><br/>
-        <label for="eventDate"> 홍보시간 : </label>
-        <input type="date" id="eventDate" name="eventDate" placeholder="날짜를 입력해주세요."><br/>
-        <label for="category"> 카테고리 : </label>
-        <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/>
-        <button type="button" onclick="boardEdit()">게시판 수정</button>
-        <button type="button" onclick="boardDelete()">게시판 삭제</button>
-    </form>
+    <div class="wrap">
+        <form class="board-form" name="board-form">
+            <div class="left-form">
+                <label for="title"> </label>
+            <input type="text" id="title" name="title" placeholder="제목을 입력해주세요."><br/>
+            <label for="content"> </label>
+            <textarea cols="50" rows="10" type="text" id="content" name="content" placeholder="내용을 입력해주세요."></textarea>
+            <!-- <input type="text" id="content" name="content" placeholder="내용을 입력해주세요."><br/> -->
+            </div>
+            <div class="right-form">
+                <label for="eventDate"></label>
+                <input type="date" id="eventDate" name="eventDate" placeholder="날짜를 입력해주세요."><br/>
+                <label for="category"></label>
+                <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/>
+                <button id="boardEditButton" type="button" onclick="boardEdit()">게시판 수정</button><br/>
+                <button id="boardDeleteButton" type="button" onclick="boardDelete()">게시판 삭제</button>
+                <button id="backButton" type="button" onclick="back()">뒤로가기</button>
+            </div>
+        </form>
+    </div>
+    
 
     <script src="../public/js/board/board_CRUD.js"></script>
 </body>
