--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -3,6 +3,6 @@
 .main-content {
     width: 100%; min-height: 850px; box-sizing: border-box;
     padding-top: 1em; 
-
+    background-color: rgb(231, 231, 231)
 
 }
