--- a/public/css/board/board_list.css
+++ b/public/css/board/board_list.css
@@ -10,7 +10,7 @@
     }
     .wrap > .imgFlex1:hover{
         border : solid rgb(244, 115, 033) 3px;
-       background-color:  rgb(71,87,111);
+       background-color:  rgb(244, 115, 033);
        color: rgb(255, 255, 255);
     }
     .wrap > .imgFlex2:hover{
@@ -33,8 +33,8 @@
         align-items: center;
         height: 170px;
         width: 45%;
-        background-color: rgb(71,87,111);
-        border : solid rgb(71,87,111) 3px;
+        background-color: rgb(123,142,169);
+        border : solid rgb(123,142,169) 3px;
         /* rgb(71.87.111) */
         /* #67c8ff */
         border-radius: 7px;
@@ -50,8 +50,8 @@
         align-items: center;
         height: 170px;
         width: 45%;
-        background-color: rgb(71,87,111);
-        border : solid rgb(71,87,111) 3px;
+        background-color: rgb(123,142,169);
+        border : solid rgb(123,142,169) 3px;
         border-radius: 7px;
         margin-left: 1.5%;
         margin-right: 1.5%;
@@ -82,10 +82,10 @@
     }
     .boxBordCategory{
         height: 20%;
-        background-color: rgb(244, 115, 033);
+        background-color: rgb(255, 255, 255);
         border-radius: 5px;
         display: inline;
-        color: rgb(255, 255, 255);
+        color: rgb(71,87,111);;
     }
     .boxTitle{
         color: rgb(255, 255, 255);
