--- a/views/postedit.ejs
+++ b/views/postedit.ejs
@@ -11,17 +11,14 @@
         color:  #67c8ff;
         text-align: center;
     }
-
     .wrap{
-
+        background-color: rgb(71,87,111);
     }
     .board-form{
         background-color:  rgb(255, 255, 255);
-      
         display: block;
        margin-left: 5%;
        margin-right: 5%;
-     
        height: 400px;
     }
     .board-form #title {
@@ -49,7 +46,6 @@
         border-radius: 10px;
     }
     #category{
-
         height: 40px;
         background-color: rgb(255, 255, 255);
         border: solid #67c8ff 3px;
@@ -60,9 +56,7 @@
         background-color:rgb(255, 255, 255);
         border: solid #67c8ff 3px;
         border-radius: 10px;
-        color: #67c8ff;
-       
-        
+        color: #67c8ff;   
     }
     #boardEditButton:hover{
     
@@ -72,7 +66,6 @@
         color: rgb(255, 255, 255);
     }
     #boardDeleteButton{
-        /* margin-top: 40px; */
         height: 40px;
         background-color:rgb(255, 255, 255);
         border: solid #67c8ff 3px;
@@ -93,26 +86,12 @@
     }
     .right-form{
         margin:0 auto;
-        /* margin-right: 50px; */
         display: flex;
         width: 100%;
         margin-top: 40px;
         flex-direction: column;
     }
-    @media (max-width : 800px) {
-        .left-form{
-           
-        }
-        .right-form{
-           
 
-           
-        }
-        .board-form{
-           
-
-        }
-    }
 </style>
 <body>
     <h1>수정 페이지</h1>
