로그인 회원가입 페이지 분리

--- a/views/findPw.ejs
+++ b/views/findPw.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script src="/public/js/findPw.js" defer></script>
     <title>비밀번호 찾기</title>
     <link rel="stylesheet" href="/public/css/findPw.css">
 </head>
@@ -38,33 +39,5 @@
         </div>
         <div class="result"></div>
     </form>
-
-    <script>
-        async function findPw() {
-            const resultBox = document.querySelector('.result')
-            const form = document.forms['findPw-form']
-            const data = {
-                login_id: form.id.value,
-                name: form.name.value,
-            }
-            const result = await axios({
-                method: "post",
-                url: "/findpw",
-                data,
-            })
-            if (result.data.result) {
-                alert(`${result.data.message}`)
-                document.location.href = '/'
-            } else {
-                resultBox.textContent = `${result.data.message}`
-                resultBox.classList.add('show');
-            }
-        }
-        function cancel() {
-            window.location.href='/'
-        }
-
-    </script>
 </body>
-
 </html>
