--- a/public/css/profileEdit.css
+++ b/public/css/profileEdit.css
@@ -99,21 +99,35 @@ body {
 }
 
 /* 저장 버튼 스타일 */
-button {
-    position: relative;
-    left: 33%;
+.btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+.save_btn button {
     background-color: #3498db;
-    width: 30%;
-    margin-top: 20px;
-    padding: 10px 20px;
-    border-radius: 3px;
-    border : none;
     color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
     cursor: pointer;
 }
 
-button:hover {
+.cancel_btn button {
+    background-color: #c6c6c6;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+.save_btn button:hover {
     background-color: #2980b9;
+}
+.cancel_btn button:hover {
+    background-color: #9c9c9c;
 }
 
 /* 비밀번호 변경 링크 */
