--- a/views/profileDelete.ejs
+++ b/views/profileDelete.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/public/js/profileDelete.js" defer></script>
     <title>회원 탈퇴</title>
     <link rel="stylesheet" href="/public/css/profileDelete.css">
 </head>
@@ -43,39 +44,6 @@
         </form>
         <div class="result"></div>
     </div>
-
-    <script>
-        function deleteFunc() {
-            const resultBox = document.querySelector('.result')
-            const form = document.forms['delete-form']
-            const data = {
-                id: form.id.value,
-                login_id: form.login_id.value,
-                login_pw: form.login_pw.value,
-                Cid: form.Cid.value,
-                Cpw: form.Cpw.value,
-            }
-            axios({
-                method: 'POST',
-                url: '/profile/edit/delete',
-                data,
-            }).then((res) => {
-                if (res.data.result) {
-                    if (!confirm('탈퇴하시겠습니까?')) {
-                        return;
-                    }
-                    alert('회원 탈퇴되었습니다.')
-                    document.location.href = '/';
-                } else {
-                    resultBox.textContent = (`${res.data.message}`)
-                    resultBox.classList.add('show');
-                }
-            })
-        }
-        function cancel() {
-            window.location.href='/profile/edit'
-        }
-    </script>
 </body>
 
 </html>
