--- a/views/profileEdit.ejs
+++ b/views/profileEdit.ejs
@@ -77,7 +77,14 @@
                 </div>
             </div>
             <!-- 저장 버튼 -->
-            <button type="button" onclick="edit()">저장하기</button>
+            <div class="btn">
+                <div class="save_btn">
+                    <button type="button" onclick="edit()">저장하기</button>
+                </div>
+                <div class="cancel_btn">
+                    <button type="button" onclick="cancel()">뒤로가기</button>
+                </div>
+            </div>
         </form>
     </div>
 </body>
