--- a/views/pwEdit.ejs
+++ b/views/pwEdit.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/public/js/pwEdit.js" defer></script>
     <title>비밀번호 변경</title>
     <link rel="stylesheet" href="/public/css/pwEdit.css">
 </head>
@@ -45,40 +46,6 @@
             <div class="result"></div>
         </div>
     </form>
-
-    <script>
-        async function pwEdit() {
-            const resultBox = document.querySelector('.result')
-            const form = document.forms['pw-edit']
-            const data = {
-                id: form.id.value,
-                login_id: form.login_id.value,
-                login_pw: form.login_pw.value,
-                Cpw: form.Cpw.value,
-                pw_edit: form.pw_edit.value,
-                pw_edit2: form.pw_edit2.value,
-            }
-            const res = await axios({
-                method: 'POST',
-                url: '/profile/edit/pw',
-                data,
-            })
-            if (res.data.result) {
-                if (!confirm('변경하시겠습니까?')) {
-                    return;
-                }
-                alert('변경완료')
-                document.location.href='/profile';
-            }else if(res.data.result === false) {
-                resultBox.textContent = (`${res.data.message}`)
-                resultBox.classList.add('show');
-            }
-        }
-        function cancel() {
-            window.location.href='/profile/edit'
-        }
-
-    </script>
 </body>
 
 </html>
