--- a/views/boardList.ejs
+++ b/views/boardList.ejs
@@ -14,7 +14,8 @@
 </head>
 <body>
     <header class="main-header">
-        <span class="header-logo logo">Chatta</span>
+        <span class="header-logo logo"><a href="/">Chatta</a></span>
+        
         <ul class="header-menu">
             <li><a href="/post/new">게시판 등록</a></li>
         </ul>
