--- a/public/css/header.css
+++ b/public/css/header.css
@@ -13,12 +13,15 @@
     display: flex; background-color: rgb(71,87,111);
     align-items: center; justify-content: space-between;
 }
-
-.main-header > .header-logo {
+ 
+.main-header > .header-logo a{
     cursor: pointer; font-weight: bold;
     color: #fff;
-}       
-
+    text-decoration: none;
+    font-family: 'PartialSansKR-Regular', Courier, monospace;
+      color: white;
+      font-size:  xx-large;
+}
 /** manu */
 .main-header > .header-menu {
     margin: 0; padding: 0; list-style: none;
