--- a/views/postNew.ejs
+++ b/views/postNew.ejs
@@ -5,125 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="../public/css/board/board_edit.css">
     <title>게시판 등록 페이지</title>
     
 </head>
-<style>
-    h1{
-        color:  #67c8ff;
-        text-align: center;
-    }
 
-    .wrap{
-        background-color: rgb(71,87,111);
-    }
-    .board-form{
-        background-color:  rgb(255, 255, 255);
-      
-        display: block;
-       margin-left: 5%;
-       margin-right: 5%;
-
-    }
-    .board-form #title {
-      
-        text-align: center;
-
-        width: 100%;
-        height: 40px;
-  
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-        background-color:  rgb(255, 255, 255);
-
-    }
-    #content {
-
-        background-color: rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-
-        width: 100%;
-        resize: none;
-
-    }
-    
-    #eventDate{
-        height: 40px;
-        background-color:rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-    }
-    #category{
-        margin-bottom: 40px;
-        height: 40px;
-        background-color: rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-    }
-    #boardCreateButton{
-        margin-bottom: 40px;
-        height: 40px;
-        background-color:rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-        color: #67c8ff
-    }
-    #boardCreateButton:hover{
-    
-        background-color:#67c8ff;
-        border: solid #67c8ff 3px;
-  
-        color: rgb(255, 255, 255);
-    }
-    #backButton{
-        height: 40px;
-        background-color:rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-        color: #67c8ff
-    }
-    #backButton:hover{
-    
-        background-color:#67c8ff;
-        border: solid #67c8ff 3px;
-  
-        color: rgb(255, 255, 255);
-    }
-    .left-form{
-        margin:0 auto;
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-       
-    }
-    .right-form{
-        margin:0 auto;
-        /* margin-right: 50px; */
-        display: flex;
-        width: 100%;
-        margin-top: 40px;
-        flex-direction: column;
-    }
-    @media (max-width : 800px) {
-        .left-form{
-
-            width: 100%;
-
-        }
-        .right-form{
-            margin-top: 40px;
-
-            width: 100%;
-        }
-        .board-form{
-            display: block;
-
-        }
-    }
-</style>
 <body>
-    <h1>게시판 작성</h1>
+    
 <!-- 
     <form name="board-form">
         <label for="title">게시글 제목 : </label>
@@ -152,7 +40,8 @@
                 <button id="boardCreateButton" type="button" onclick="boardCreate()">게시판 만들기</button>
             </div>
         </form> -->
-        <div class="wrap">
+        <div class="board-body">
+            <h1>게시판 작성</h1>
             <form class="board-form" name="board-form">
                 <div class="left-form">
                     <label for="title"></label>
