--- a/views/postedit.ejs
+++ b/views/postedit.ejs
@@ -4,97 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="../public/css/board/board_edit.css">
     <title>게시판 수정 페이지</title>
 </head>
-<style>
-    h1{
-        color:  #67c8ff;
-        text-align: center;
-    }
-    .wrap{
-        background-color: rgb(71,87,111);
-    }
-    .board-form{
-        background-color:  rgb(255, 255, 255);
-        display: block;
-       margin-left: 5%;
-       margin-right: 5%;
-       height: 400px;
-    }
-    .board-form #title {
-        text-align: center;
-        width: 100%;
-        height: 40px;
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-        background-color:  rgb(255, 255, 255);
 
-    }
-    #content {
-        background-color: rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-        width: 100%;
-        height: 100%;
-        resize: none;
-    }
-    
-    #eventDate{
-        height: 40px;
-        background-color:rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-    }
-    #category{
-        height: 40px;
-        background-color: rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-    }
-    #boardEditButton{
-        height: 40px;
-        background-color:rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-        color: #67c8ff;   
-    }
-    #boardEditButton:hover{
-    
-        background-color:#67c8ff;
-        border: solid #67c8ff 3px;
-  
-        color: rgb(255, 255, 255);
-    }
-    #boardDeleteButton{
-        height: 40px;
-        background-color:rgb(255, 255, 255);
-        border: solid #67c8ff 3px;
-        border-radius: 10px;
-        color: #67c8ff
-    }
-    #boardDeleteButton:hover{
-        background-color:#67c8ff;
-        border: solid #67c8ff 3px;
-        color: rgb(255, 255, 255);
-    }
-    .left-form{
-        margin:0 auto;
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-       
-    }
-    .right-form{
-        margin:0 auto;
-        display: flex;
-        width: 100%;
-        margin-top: 40px;
-        flex-direction: column;
-    }
-
-</style>
 <body>
-    <h1>수정 페이지</h1>
+    <!-- <h1>수정 페이지</h1>
     <div class="wrap">
         <form class="board-form" name="board-form">
             <div class="left-form">
@@ -102,7 +17,7 @@
             <input type="text" id="title" name="title" placeholder="제목을 입력해주세요."><br/>
             <label for="content"> </label>
             <textarea cols="50" rows="10" type="text" id="content" name="content" placeholder="내용을 입력해주세요."></textarea>
-            <!-- <input type="text" id="content" name="content" placeholder="내용을 입력해주세요."><br/> -->
+           
             </div>
             <div class="right-form">
                 <label for="eventDate"></label>
@@ -114,8 +29,32 @@
                 <button id="backButton" type="button" onclick="back()">뒤로가기</button>
             </div>
         </form>
-    </div>
+    </div> -->
     
+    <div class="board-body">
+        <h1>수정 페이지</h1>
+        <form class="board-form" name="board-form">
+            <div class="left-form">
+                <label for="title"></label>
+            <input type="text" id="title" name="title" placeholder="제목을 입력해주세요."><br/>
+            <label for="content"> </label>
+            <textarea  cols="50" rows="30" type="text" id="content" name="content" placeholder="내용을 입력해주세요."></textarea>
+            </div>
+            <div class="right-form">
+                <label for="eventDate">홍보시간</label>
+                <input type="datetime-local" id="eventDate" name="eventDate" placeholder="홍보시간을 입력해주세요."><br/>
+                <label for="category">카테고리</label>
+                <!-- <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/> -->
+                <select name="category" id="category">
+                    <option value="sports">sports</option>
+                    <option value="e-sports">e-sports</option>
+                </select>
+                <button id="boardEditButton" type="button" onclick="boardEdit()">게시판 수정</button><br/>
+                <button id="boardDeleteButton" type="button" onclick="boardDelete()">게시판 삭제</button>
+                <button id="backButton" type="button" onclick="back()">뒤로가기</button>
+            </div>
+        </form>
+    </div>
 
     <script src="../public/js/board/board_CRUD.js"></script>
 </body>
