중간 단계 세이브

--- a/views/chatRoom.ejs
+++ b/views/chatRoom.ejs
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/public/js/socket/system_socket.js" defer></script>
+    <script src="/public/js/socket/room_socket.js" defer></script>
 </head>
 <body>
     <h1>채팅방</h1>
 </body>
+<script>
+    const user_id = '<%= id %>'
+    const nickname = '<%= nickname %>'
+    const room_id = '<%= room_id %>'
+    const socket = io ('/');
+</script>
 </html>
