--- a/views/chatRoomList.ejs
+++ b/views/chatRoomList.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,32 +11,34 @@
     <ul id="lists"></ul>
 </body>
 <script>
-    const socket = io('/room');
     const user_id = '<%= id %>'
     const nickname = '<%= nickname %>'
     const listUl = document.querySelector("#lists");
     async function myChatRoomList(){
         const myChatRoom = await axios({
-                method: "post",
-                url: "/load/roomlist",
-                data:{user_id}
-            })
+            method: "post",
+            url: "/load/roomlist",
+            data:{user_id}
+        })
         console.log('mychatroom',myChatRoom);
         let list = myChatRoom.data.roomInfoList;
         console.log('list',list);
         list.forEach(chatRoom => {
             const li = document.createElement('li');
-            li.textContent = chatRoom.title
-            li.ondblclick = chatRoomOpen
+            console.log('chat',chatRoom);
+            for (e in chatRoom){
+                console.log('e',e)
+                const div = document.createElement('div');
+                div.innerHTML = e + ' : ' + chatRoom[`${e}`];
+                li.appendChild(div);
+            }          
+            li.ondblclick = () => {
+                window.open(`/chat_room?room_id=${chatRoom.room_id}`)
+            }
             listUl.appendChild(li);
         });
         console.log(list);
     }
     myChatRoomList()
-    function chatRoomOpen(){
-        window.open('/chat_room')
-    }
 </script>
-<script src="/public/js/socket/system_socket.js" defer></script>
-<script src="/public/js/socket/room_socket.js" defer></script>
 </html>
